syntax = "proto3";

package healthcheck;

message Ping {
    string message = 1;
}

message Pong {
    string message = 1;
}

service HealthCheck {
    rpc Check(Ping) returns (Pong);
}
